<?xml version="1.0"?>
<package format="2">
  <name>socketcan_bridge</name>
  <version>0.8.5</version>
  <description>Conversion nodes for messages from SocketCAN to a ROS Topic and vice versa.</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="ivor@iwanders.net">Ivor Wanders</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/socketcan_bridge</url>
  <url type="repository">https://github.com/ros-industrial/ros_canopen</url>
  <url type="bugtracker">https://github.com/ros-industrial/ros_canopen/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>rosconsole_bridge</depend>
  <depend>roscpp</depend>
  <depend>socketcan_interface</depend>
    <build_depend>autoware_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- 其他构建时依赖项 -->

  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
